--- a/backend/static/css/scss/styles.scss
+++ b/backend/static/css/scss/styles.scss
@@ -21,3 +21,4 @@
 @import 'components/tooltip/jd_tooltip';
 @import 'components/acordion/jd_acordion';
 @import 'lib/introJS';
+@import 'responsive_elements';
