--- a/backend/static/css/scss/_videos_slide_container.scss
+++ b/backend/static/css/scss/_videos_slide_container.scss
@@ -1,3 +1,9 @@
+
+.jd-skills-number-container {
+  justify-content: space-around;
+}
+
+
 .video-bg-section {
     .bg-video {
         position: absolute;
@@ -179,5 +185,16 @@
     margin-bottom: 0;
     padding: 0.7rem 0.3rem;
     font-size: 0.98rem;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .jd-section {
+      div.container {
+          width: 90%!important;
+          max-width: 90%;
+      }
+  }
+  .jd-skills-number-container {
   }
 }
